Enable host math libraries when testing is enabled
Automatically set THEROCK_ENABLE_HOST_MATH=ON when THEROCK_BUILD_TESTING=ON
to ensure host math libraries (OpenBLAS, AOCL-BLAS, SuiteSparse) are built
for rocBLAS clients and tests.

Without this, AOCL-BLAS was declared but never built on CI because its
feature group (HOST_MATH) was disabled by default, causing rocBLAS
configure to fail with "Could not find any BLAS library".

Fixes CI failure where rocBLAS clients couldn't find BLAS library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,12 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND NOT DEFINED THEROCK_BUILD_TESTIN
 endif()
 if(THEROCK_BUILD_TESTING)
   message(STATUS "Enabling building tests")
+  # Enable host math libraries (OpenBLAS, AOCL-BLAS, SuiteSparse) when testing is enabled
+  # These provide CPU reference BLAS implementations for rocBLAS clients/tests
+  if(NOT DEFINED THEROCK_ENABLE_HOST_MATH)
+    set(THEROCK_ENABLE_HOST_MATH ON)
+    message(STATUS "Enabling host math libraries for testing")
+  endif()
 endif()
 
 ################################################################################
