--- a/.github/workflows/multi_arch_ci_linux.yml
+++ b/.github/workflows/multi_arch_ci_linux.yml
@@ -84,4 +84,4 @@ jobs:
       artifact_run_id: ${{ inputs.artifact_run_id }}
       test_type: ${{ inputs.test_type }}
       test_labels: ${{ inputs.test_labels }}
-      sanity_check_only_for_family: ${{ matrix.family_info.sanity_check_only_for_family == true }}
+      sanity_check_only_for_family: ${{ matrix.family_info.sanity_check_only_for_family }}
