--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,7 +17,7 @@ updates:
     schedule:
       # 2:00 AM PST → 10:00 UTC
       interval: "cron"
-      cronjob: "0 10 * * *"
+      cronjob: "0 10 */2 * *"
     target-branch: "main"
     allow:
       - dependency-name: "rocm-systems"
