--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -3,7 +3,7 @@ pytest==8.3.5
 pytest-subtests==0.10.0
 pytest-check==2.5.3
 pytest-timeout==2.4.0
-perfetto==0.7.0
+perfetto==0.7.0 # Newer versions of perfetto remove support for required GLIBC version.
 PyYAML==6.0.2
 pyzstd>=0.16.0
 tabulate==0.9.0
