--- a/math-libs/BLAS/artifact-blas.toml
+++ b/math-libs/BLAS/artifact-blas.toml
@@ -71,6 +71,15 @@ include = [
   # Clients tests
   "bin/hipblaslt-test*",
   "bin/hipblaslt_gentest.py",
+  "bin/hipblaslt_common.yaml",
+  "bin/hipblaslt-perf",
+  # Python modules for hipblaslt-perf
+  "bin/bench.py",
+  "bin/bench_sample.py", 
+  "bin/generator.py",
+  "bin/git_info.py",
+  "bin/specs.py",
+  "bin/suites.py",
   "bin/hipblaslt_gtest.data",
   "bin/hipblaslt_*.yaml",
   # Built samples (may want these in a samples component at some point).
