--- a/.github/workflows/build_portable_linux_pytorch_wheels.yml
+++ b/.github/workflows/build_portable_linux_pytorch_wheels.yml
@@ -109,6 +109,14 @@ jobs:
       PACKAGE_DIST_DIR: ${{ github.workspace }}/output/packages/dist
       S3_BUCKET_PY: "therock-${{ inputs.release_type }}-python"
       optional_build_prod_arguments: ""
+      CACHE_DIR: ${{ github.workspace }}/.container-cache
+      # sccache configuration for ROCm compiler caching with S3 backend
+      SCCACHE_BUCKET: therock-pytorch-sccache
+      SCCACHE_REGION: us-east-2
+      SCCACHE_S3_USE_SSL: "true"
+      SCCACHE_S3_KEY_PREFIX: ${{ inputs.amdgpu_family }}/
+      SCCACHE_S3_SERVER_SIDE_ENCRYPTION: "true"
+      SCCACHE_IDLE_TIMEOUT: "0"
     outputs:
       cp_version: ${{ env.cp_version }}
       # The following are python package versions produced by the build. The
@@ -139,6 +147,18 @@ jobs:
         run: |
           git config --global user.name "therockbot"
           git config --global user.email "therockbot@amd.com"
+
+      - name: Configure AWS Credentials for sccache
+        if: ${{ github.repository_owner == 'ROCm' }}
+        uses: aws-actions/configure-aws-credentials@61815dcd50bd041e203e49132bacad1fd04d2708 # v5.1.1
+        with:
+          aws-region: us-east-2
+          role-to-assume: arn:aws:iam::692859939525:role/therock-${{ inputs.release_type }}
+
+      - name: Install sccache
+        run: |
+          pip install sccache
+          sccache --version
 
       - name: Select Python version
         run: |
@@ -191,9 +211,17 @@ jobs:
             --install-rocm \
             --pip-cache-dir /tmp/pipcache \
             --index-url "${{ inputs.cloudfront_url }}/${{ inputs.amdgpu_family }}/" \
+            --use-sccache \
             --clean \
             --output-dir ${{ env.PACKAGE_DIST_DIR }} ${{ env.optional_build_prod_arguments }}
           python ./build_tools/github_actions/write_torch_versions.py --dist-dir ${{ env.PACKAGE_DIST_DIR }}
+
+      - name: Report sccache stats
+        if: ${{ !cancelled() }}
+        run: |
+          echo "sccache Stats:"
+          echo "--------------"
+          sccache --show-stats || true
 
       - name: Sanity Check Wheel
         run: |
