--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ on:
         description: "If enabled, the CI will pull Windows artifacts using artifact_run_id and only run tests"
       additional_label_options:
         type: string
-        description: "If enabled, these additional labels options will be applied. ex: kernel:oem"
+        description: "If enabled, these additional labels options will be applied. ex: test_runner:oem"
         default: ""
       artifact_run_id:
         type: string
