Change Origami to lowercase origami

--- a/build_tools/packaging/linux/package.json
+++ b/build_tools/packaging/linux/package.json
@@ -460,7 +460,7 @@
             ]
           },
           {
-            "Name": "Origami",
+            "Name": "origami",
             "Components": [
               "lib",
               "run",
