--- a/math-libs/BLAS/artifact-blas.toml
+++ b/math-libs/BLAS/artifact-blas.toml
@@ -19,17 +19,17 @@ include = [
 ]
 optional = true
 
-# Origami
-[components.dbg."math-libs/BLAS/Origami/stage"]
+# origami
+[components.dbg."math-libs/BLAS/origami/stage"]
 optional = true
-[components.dev."math-libs/BLAS/Origami/stage"]
+[components.dev."math-libs/BLAS/origami/stage"]
 optional = true
-[components.lib."math-libs/BLAS/Origami/stage"]
+[components.lib."math-libs/BLAS/origami/stage"]
 include = [
   "lib/**",
 ]
 optional = true
-[components.test."math-libs/BLAS/Origami/stage"]
+[components.test."math-libs/BLAS/origami/stage"]
 include = [
   "bin/origami-tests*",
   "bin/origami/**",
