Add amdsmi as runtime dep for rccl

--- a/comm-libs/CMakeLists.txt
+++ b/comm-libs/CMakeLists.txt
@@ -37,6 +37,7 @@ if(THEROCK_ENABLE_RCCL AND THEROCK_SANITIZER STREQUAL "")
     RUNTIME_DEPS
       hip-clr
       hipify
+      amdsmi
       rocm_smi_lib
       rocprofiler-register
       ${optional_profiler_deps}
