Refactor external repo CI integration
- Remove external_repo_project_maps.py (dynamic import from external repos)
- Add path detection and validation for external repo checkouts
- Fix path resolution consistency between Python and CMake
- Support patches and DVC for external source directories
- Use gha_set_output utility and add default args
- Enforce full builds for external repos

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -102,7 +102,7 @@ jobs:
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           repository: ${{ inputs.repository_override || github.repository }}
-          path: .external-source-temp
+          path: external-source
           # We need the parent commit to do a diff
           fetch-depth: 2
 
