--- a/.github/workflows/build_portable_linux_artifacts.yml
+++ b/.github/workflows/build_portable_linux_artifacts.yml
@@ -97,7 +97,7 @@ jobs:
       IS_PR_FROM_FORK: ${{ github.event.pull_request.head.repo.fork }}
       # Environment variables for fetch_sources.py to handle external repo overrides
       EXTERNAL_SOURCE_CHECKOUT: ${{ inputs.external_source_checkout }}
-      EXTERNAL_SOURCE_TEMP_PATH: ${{ inputs.external_source_checkout && '.external-source-temp' || '' }}
+      EXTERNAL_SOURCE_PATH: ${{ inputs.external_source_checkout && 'external-source' || '' }}
       EXTRA_C_COMPILER_LAUNCHER: "${{ github.workspace }}/build_tools/resource_info.py"
       EXTRA_CXX_COMPILER_LAUNCHER: "${{ github.workspace }}/build_tools/resource_info.py"
     steps:
@@ -107,14 +107,14 @@ jobs:
           repository: "ROCm/TheRock"
           ref: ${{ inputs.therock_ref || github.ref }}
 
-      # For external repos (rocm-libraries, rocm-systems), checkout the source repository.
-      # fetch_sources.py will move this to the appropriate submodule directory.
+      # For external repos (rocm-libraries, rocm-systems), checkout to alternate path.
+      # CMake will be configured to use this path via THEROCK_*_SOURCE_DIR options.
       - name: Checkout external source repository
         if: ${{ inputs.external_source_checkout }}
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           repository: ${{ inputs.repository_override || github.repository }}
-          path: .external-source-temp
+          path: external-source
 
       # safe.directory must be set before Runner Health Status
       - name: Adjust git config
