--- a/.github/workflows/build_windows_artifacts.yml
+++ b/.github/workflows/build_windows_artifacts.yml
@@ -94,7 +94,7 @@ jobs:
       IS_PR_FROM_FORK: ${{ github.event.pull_request.head.repo.fork }}
       # Environment variables for fetch_sources.py to handle external repo overrides
       EXTERNAL_SOURCE_CHECKOUT: ${{ inputs.external_source_checkout }}
-      EXTERNAL_SOURCE_TEMP_PATH: ${{ inputs.external_source_checkout && '.external-source-temp' || '' }}
+      EXTERNAL_SOURCE_PATH: ${{ inputs.external_source_checkout && 'external-source' || '' }}
     steps:
       - name: Configure GitHub longpath
         run: |
@@ -106,14 +106,14 @@ jobs:
           repository: "ROCm/TheRock"
           ref: ${{ inputs.therock_ref || github.ref }}
 
-      # For external repos (rocm-libraries, rocm-systems), checkout the source repository.
-      # fetch_sources.py will move this to the appropriate submodule directory.
+      # For external repos (rocm-libraries, rocm-systems), checkout to alternate path.
+      # CMake will be configured to use this path via THEROCK_*_SOURCE_DIR options.
       - name: Checkout external source repository
         if: ${{ inputs.external_source_checkout }}
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           repository: ${{ inputs.repository_override || github.repository }}
-          path: .external-source-temp
+          path: external-source
 
       - uses: actions/setup-python@a309ff8b426b58ec0e2a45f0f869d46889d02405 # v6.2.0
         with:
