Fix merge conflict: add missing therock_ref input to test_sanity_check.yml
The therock_ref input was added to test_artifacts.yml during merge but the
corresponding input definition was missing in test_sanity_check.yml workflow.

--- a/.github/workflows/test_sanity_check.yml
+++ b/.github/workflows/test_sanity_check.yml
@@ -29,6 +29,10 @@ on:
         type: string
       platform:
         type: string
+      therock_ref:
+        type: string
+        description: "TheRock git ref to use (for external repos)"
+        default: ""
   push:
     branches:
       - ADHOCBUILD
