--- a/.github/workflows/build_portable_linux_pytorch_wheels.yml
+++ b/.github/workflows/build_portable_linux_pytorch_wheels.yml
@@ -113,7 +113,7 @@ jobs:
       SCCACHE_BUCKET: therock-pytorch-sccache
       SCCACHE_REGION: us-east-2
       SCCACHE_S3_USE_SSL: "true"
-      SCCACHE_S3_KEY_PREFIX: ${{ inputs.amdgpu_family }}/
+      SCCACHE_S3_KEY_PREFIX: linux/${{ inputs.amdgpu_family }}/
       SCCACHE_S3_SERVER_SIDE_ENCRYPTION: "true"
       SCCACHE_IDLE_TIMEOUT: "0"
     outputs:
