--- a/.github/workflows/build_portable_linux_artifacts.yml
+++ b/.github/workflows/build_portable_linux_artifacts.yml
@@ -95,11 +95,10 @@ jobs:
       AMDGPU_FAMILIES: ${{ inputs.amdgpu_families }}
       TEATIME_FORCE_INTERACTIVE: 0
       IS_PR_FROM_FORK: ${{ github.event.pull_request.head.repo.fork }}
-      # Environment variables for fetch_sources.py to handle external repo overrides
-      EXTERNAL_SOURCE_CHECKOUT: ${{ inputs.external_source_checkout }}
-      EXTERNAL_SOURCE_PATH: ${{ inputs.external_source_checkout && 'external-source' || '' }}
       EXTRA_C_COMPILER_LAUNCHER: "${{ github.workspace }}/build_tools/resource_info.py"
       EXTRA_CXX_COMPILER_LAUNCHER: "${{ github.workspace }}/build_tools/resource_info.py"
+      # For external repo integration (rocm-libraries, rocm-systems)
+      EXTERNAL_SOURCE_CHECKOUT: ${{ inputs.external_source_checkout }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
@@ -107,14 +106,24 @@ jobs:
           repository: "ROCm/TheRock"
           ref: ${{ inputs.therock_ref || github.ref }}
 
-      # For external repos (rocm-libraries, rocm-systems), checkout to alternate path.
+      # For external repos (rocm-libraries, rocm-systems), checkout to isolated path.
       # CMake will be configured to use this path via THEROCK_*_SOURCE_DIR options.
+      - name: Extract external repo name
+        if: ${{ inputs.external_source_checkout }}
+        id: external_repo
+        run: |
+          REPO="${{ inputs.repository_override || github.repository }}"
+          REPO_NAME="${REPO##*/}"
+          echo "repo_name=${REPO_NAME}" >> $GITHUB_OUTPUT
+          echo "external_path=external-repos/${REPO_NAME}" >> $GITHUB_OUTPUT
+          echo "Detected external repo: ${REPO_NAME}, checkout path: external-repos/${REPO_NAME}"
+
       - name: Checkout external source repository
         if: ${{ inputs.external_source_checkout }}
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
           repository: ${{ inputs.repository_override || github.repository }}
-          path: external-source
+          path: ${{ steps.external_repo.outputs.external_path }}
 
       # safe.directory must be set before Runner Health Status
       - name: Adjust git config
