Fix Windows workflow: specify PowerShell shell for external repo extraction
The script uses PowerShell syntax but was defaulting to bash shell on
Windows runners. Added 'shell: pwsh' to ensure PowerShell is used.

--- a/.github/workflows/build_windows_artifacts.yml
+++ b/.github/workflows/build_windows_artifacts.yml
@@ -110,6 +110,7 @@ jobs:
       - name: Extract external repo name
         if: ${{ inputs.external_source_checkout }}
         id: external_repo
+        shell: pwsh
         run: |
           $REPO = "${{ inputs.repository_override || github.repository }}"
           $REPO_NAME = $REPO.Split('/')[-1]
