Export CK's headers and cmake files

--- a/ml-libs/artifact-composable-kernel.toml
+++ b/ml-libs/artifact-composable-kernel.toml
@@ -1,6 +1,10 @@
 # composable-kernel
 [components.dbg."ml-libs/composable_kernel/stage"]
 [components.dev."ml-libs/composable_kernel/stage"]
+include = [
+  "include/ck/**/*",
+  "lib/cmake/composable_kernel/*",
+]
 [components.doc."ml-libs/composable_kernel/stage"]
 [components.lib."ml-libs/composable_kernel/stage"]
 include = [
