--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,37 +70,37 @@ jobs:
     with:
       build_variant: "release"
 
-  linux_build_and_test:
-    name: Linux::${{ matrix.variant.family }}::${{ matrix.variant.build_variant_label }}
-    needs: setup
-    if: >-
-      ${{
-        needs.setup.outputs.linux_variants != '[]' &&
-        needs.setup.outputs.enable_build_jobs == 'true'
-      }}
-    strategy:
-      fail-fast: false
-      matrix:
-        variant: ${{ fromJSON(needs.setup.outputs.linux_variants) }}
-    uses: ./.github/workflows/ci_linux.yml
-    secrets: inherit
-    with:
-      amdgpu_families: ${{ matrix.variant.family }}
-      artifact_group: ${{ matrix.variant.artifact_group }}
-      test_runs_on: ${{ matrix.variant.test-runs-on }}
-      build_variant_label: ${{ matrix.variant.build_variant_label }}
-      build_variant_suffix: ${{ matrix.variant.build_variant_suffix }}
-      build_variant_cmake_preset: ${{ matrix.variant.build_variant_cmake_preset }}
-      test_labels: ${{ needs.setup.outputs.linux_test_labels }}
-      artifact_run_id: ${{ inputs.artifact_run_id }}
-      expect_failure: ${{ matrix.variant.expect_failure == true }}
-      use_prebuilt_artifacts: ${{ inputs.linux_use_prebuilt_artifacts == true && 'true' || 'false' }}
-      rocm_package_version: ${{ needs.setup.outputs.rocm_package_version }}
-      test_type: ${{ needs.setup.outputs.test_type }}
-      sanity_check_only_for_family: ${{ matrix.variant.sanity_check_only_for_family == true }}
-    permissions:
-      contents: read
-      id-token: write
+  # linux_build_and_test:
+  #   name: Linux::${{ matrix.variant.family }}::${{ matrix.variant.build_variant_label }}
+  #   needs: setup
+  #   if: >-
+  #     ${{
+  #       needs.setup.outputs.linux_variants != '[]' &&
+  #       needs.setup.outputs.enable_build_jobs == 'true'
+  #     }}
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       variant: ${{ fromJSON(needs.setup.outputs.linux_variants) }}
+  #   uses: ./.github/workflows/ci_linux.yml
+  #   secrets: inherit
+  #   with:
+  #     amdgpu_families: ${{ matrix.variant.family }}
+  #     artifact_group: ${{ matrix.variant.artifact_group }}
+  #     test_runs_on: ${{ matrix.variant.test-runs-on }}
+  #     build_variant_label: ${{ matrix.variant.build_variant_label }}
+  #     build_variant_suffix: ${{ matrix.variant.build_variant_suffix }}
+  #     build_variant_cmake_preset: ${{ matrix.variant.build_variant_cmake_preset }}
+  #     test_labels: ${{ needs.setup.outputs.linux_test_labels }}
+  #     artifact_run_id: ${{ inputs.artifact_run_id }}
+  #     expect_failure: ${{ matrix.variant.expect_failure == true }}
+  #     use_prebuilt_artifacts: ${{ inputs.linux_use_prebuilt_artifacts == true && 'true' || 'false' }}
+  #     rocm_package_version: ${{ needs.setup.outputs.rocm_package_version }}
+  #     test_type: ${{ needs.setup.outputs.test_type }}
+  #     sanity_check_only_for_family: ${{ matrix.variant.sanity_check_only_for_family == true }}
+  #   permissions:
+  #     contents: read
+  #     id-token: write
 
   windows_build_and_test:
     name: Windows::${{ matrix.variant.family }}::${{ matrix.variant.build_variant_label }}
@@ -142,7 +142,7 @@ jobs:
     if: always()
     needs:
       - setup
-      - linux_build_and_test
+      # - linux_build_and_test
       - windows_build_and_test
     runs-on: ubuntu-24.04
     steps:
