--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -70,6 +70,9 @@ on:
       rocm_package_version:
         description: ROCm package version (primarily for Python packages).
         value: ${{ jobs.setup.outputs.rocm_package_version }}
+      external_source_path:
+        description: Path to external repo checkout (for external repo integration)
+        value: ${{ jobs.setup.outputs.external_source_path }}
 
 permissions:
   contents: read
@@ -89,6 +92,7 @@ jobs:
       test_type: ${{ steps.configure.outputs.test_type }}
       windows_test_labels: ${{ steps.configure.outputs.windows_test_labels }}
       rocm_package_version: ${{ steps.rocm_package_version.outputs.rocm_package_version }}
+      external_source_path: ${{ steps.external_repo.outputs.external_path || '' }}
     steps:
       - name: Checkout TheRock repository
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
