Include generate_resource_spec

--- a/math-libs/artifact-prim.toml
+++ b/math-libs/artifact-prim.toml
@@ -17,6 +17,7 @@ include = [
 include = [
   "bin/test_*",
   "bin/hipcub/CTestTestfile.cmake",
+  "bin/hipcub/generate_resource_spec*",
 ]
 
 # rocThrust
