--- a/.github/workflows/build_windows_pytorch_wheels.yml
+++ b/.github/workflows/build_windows_pytorch_wheels.yml
@@ -114,6 +114,7 @@ jobs:
       SCCACHE_S3_KEY_PREFIX: windows/${{ inputs.amdgpu_family }}/
       SCCACHE_S3_SERVER_SIDE_ENCRYPTION: "true"
       SCCACHE_IDLE_TIMEOUT: "0"
+      SCCACHE_LOG: warn
     outputs:
       cp_version: ${{ env.cp_version }}
       # The following are python package versions produced by the build. The
