Test with different settings

--- a/ml-libs/artifact-composable-kernel.toml
+++ b/ml-libs/artifact-composable-kernel.toml
@@ -2,12 +2,9 @@
 [components.dbg."ml-libs/composable_kernel/stage"]
 [components.dev."ml-libs/composable_kernel/stage"]
 include = [
-  "include/ck/**/*",
+  "include/ck/**",
   "lib/cmake/composable_kernel/*",
 ]
 [components.doc."ml-libs/composable_kernel/stage"]
 [components.lib."ml-libs/composable_kernel/stage"]
-include = [
-  "share/composable_kernel/**",
-]
 [components.run."ml-libs/composable_kernel/stage"]
