--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,10 @@ on:
         type: string
         default: ""
         description: "Insert comma-separated list of Windows GPU families to build and test. ex: gfx94X, gfx1201X"
+      skip_patches:
+        type: string
+        default: ""
+        description: "Comma-separated patch filenames to temporarily skip during patch removal coordination with external repos (e.g., '0001-foo.patch,0002-bar.patch')"
   pull_request:
     types:
       - labeled
@@ -109,6 +113,7 @@ jobs:
       linux_use_prebuilt_artifacts: ${{ inputs.linux_use_prebuilt_artifacts || false }}
       windows_test_labels: ${{ inputs.windows_test_labels || '' }}
       windows_use_prebuilt_artifacts: ${{ inputs.windows_use_prebuilt_artifacts || false }}
+      skip_patches: ${{ inputs.skip_patches || '' }}
 
   linux_build_and_test:
     name: Linux::${{ matrix.variant.family }}::${{ matrix.variant.build_variant_label }}
@@ -144,6 +149,7 @@ jobs:
       repository_override: ${{ inputs.repository_override || '' }}
       cmake_options: ${{ matrix.variant.cmake_options || '' }}
       project_to_test: ${{ matrix.variant.project_to_test || '' }}
+      skip_patches: ${{ needs.setup.outputs.skip_patches }}
     permissions:
       contents: read
       id-token: write
@@ -181,6 +187,7 @@ jobs:
       repository_override: ${{ inputs.repository_override || '' }}
       cmake_options: ${{ matrix.variant.cmake_options || '' }}
       project_to_test: ${{ matrix.variant.project_to_test || '' }}
+      skip_patches: ${{ needs.setup.outputs.skip_patches }}
     permissions:
       contents: read
       id-token: write
