--- a/.github/workflows/build_portable_linux_python_packages.yml
+++ b/.github/workflows/build_portable_linux_python_packages.yml
@@ -55,6 +55,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        with:
+          repository: ${{ inputs.repository || github.repository }}
+          ref: ${{ inputs.ref || '' }}
+
       - uses: actions/setup-python@a309ff8b426b58ec0e2a45f0f869d46889d02405 # v6.2.0
         with:
           python-version: '3.12'
@@ -124,7 +128,7 @@ jobs:
       amdgpu_family: ${{ inputs.artifact_group }}
       test_runs_on: ${{ needs.generate_target_to_run.outputs.test_runs_on }}
       package_find_links_url: ${{ needs.build_rocm_wheels.outputs.package_find_links_url }}
-      python_version: 3.12
+      python_version: "3.12"
       rocm_version: ${{ inputs.package_version }}
       repository: ${{ inputs.repository || github.repository }}
       ref: ${{ inputs.ref || '' }}
