Quote arguments consistently (fix path issues on Windows)

--- a/.github/workflows/build_windows_python_packages.yml
+++ b/.github/workflows/build_windows_python_packages.yml
@@ -88,9 +88,9 @@ jobs:
         id: upload
         run: |
           python build_tools/github_actions/upload_python_packages.py \
-            --packages-dir=${{ env.PACKAGES_DIR }} \
-            --artifact-group "${{ inputs.artifact_group }}" \
-            --run-id ${{ github.run_id }}
+            --packages-dir="${{ env.PACKAGES_DIR }}" \
+            --artifact-group="${{ inputs.artifact_group }}" \
+            --run-id="${{ github.run_id }}"
 
   generate_target_to_run:
     name: Generate target_to_run
