--- a/.github/workflows/build_portable_linux_python_packages.yml
+++ b/.github/workflows/build_portable_linux_python_packages.yml
@@ -93,8 +93,8 @@ jobs:
         run: |
           python build_tools/github_actions/upload_python_packages.py \
             --packages-dir=${{ env.PACKAGES_DIR }} \
-            --artifact-group "${{ inputs.artifact_group }}" \
-            --run-id ${{ github.run_id }}
+            --artifact-group={{ inputs.artifact_group }} \
+            --run-id=${{ github.run_id }}
 
   generate_target_to_run:
     name: Generate target_to_run
