--- a/.github/workflows/build_windows_python_packages.yml
+++ b/.github/workflows/build_windows_python_packages.yml
@@ -42,16 +42,20 @@ run-name: Build Windows Python Packages (${{ inputs.artifact_group }}, ${{ input
 jobs:
   build_rocm_wheels:
     name: Build Python | ${{ inputs.artifact_group }}
+    # Note: GitHub-hosted runners run out of disk space for some gpu families
+    runs-on: ${{ github.repository_owner == 'ROCm' && 'azure-windows-scale-rocm' || 'windows-2022' }}
+    permissions:
+      id-token: write
+    defaults:
+      run:
+        shell: bash
     outputs:
       package_find_links_url: ${{ steps.upload.outputs.package_find_links_url }}
-    runs-on: ${{ github.repository_owner == 'ROCm' && 'azure-windows-scale-rocm' || 'windows-2022' }}
     env:
       ARTIFACT_RUN_ID: "${{ inputs.artifact_run_id != '' && inputs.artifact_run_id || github.run_id }}"
       ARTIFACTS_DIR: "${{ github.workspace }}/artifacts"
       PACKAGES_DIR: "${{ github.workspace }}/packages"
-    defaults:
-      run:
-        shell: bash
+
     steps:
       - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
