--- a/.github/workflows/build_windows_python_packages.yml
+++ b/.github/workflows/build_windows_python_packages.yml
@@ -69,6 +69,14 @@ jobs:
       - name: Install Python requirements
         run: pip install boto3 packaging setuptools
 
+      - name: Install requirements
+        # The first two lines removes the default commmunity feed and uses the internal proxy feed
+        run: |
+          choco source disable -n=chocolatey
+          choco source add -n=internal -s http://10.0.167.96:8081/repository/choco-group/ --priority=1
+          choco install --no-progress -y awscli
+          echo "$PATH;C:\Program Files\Amazon\AWSCLIV2" >> $GITHUB_PATH
+
       # Note: we could fetch "all" artifacts if we wanted to include more files
       - name: Fetch artifacts
         env:
