Use requirements.txt instead of inlined requirements lists

--- a/.github/workflows/build_portable_linux_python_packages.yml
+++ b/.github/workflows/build_portable_linux_python_packages.yml
@@ -66,7 +66,7 @@ jobs:
           ref: ${{ inputs.ref || '' }}
 
       - name: Install Python requirements
-        run: pip install boto3 packaging setuptools
+        run: pip install -r requirements.txt
 
       # Note: we could fetch "all" artifacts if we wanted to include more files
       - name: Fetch artifacts
