--- a/.github/workflows/build_windows_python_packages.yml
+++ b/.github/workflows/build_windows_python_packages.yml
@@ -55,6 +55,7 @@ jobs:
       ARTIFACT_RUN_ID: "${{ inputs.artifact_run_id != '' && inputs.artifact_run_id || github.run_id }}"
       ARTIFACTS_DIR: "${{ github.workspace }}/artifacts"
       PACKAGES_DIR: "${{ github.workspace }}/packages"
+      IS_PR_FROM_FORK: ${{ github.event.pull_request.head.repo.fork }}
 
     steps:
       - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
@@ -77,17 +78,13 @@ jobs:
           choco install --no-progress -y awscli
           echo "$PATH;C:\Program Files\Amazon\AWSCLIV2" >> $GITHUB_PATH
 
-      # Note: we could fetch "all" artifacts if we wanted to include more files
       - name: Fetch artifacts
-        env:
-          IS_PR_FROM_FORK: ${{ github.event.pull_request.head.repo.fork }}
         run: |
           python ./build_tools/fetch_artifacts.py \
             --run-github-repo=${{ inputs.artifact_github_repo }} \
             --run-id=${{ env.ARTIFACT_RUN_ID }} \
             --artifact-group=${{ inputs.artifact_group }} \
-            --output-dir="${{ env.ARTIFACTS_DIR }}" \
-            _dev_ _lib_ _run_
+            --output-dir="${{ env.ARTIFACTS_DIR }}"
 
       - name: Build Python packages
         run: |
