--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ mako>=1.1.3
 # Compatible with aiobotocore 2.26.0 from dvc[s3] 3.62.0
 # installed in build_manylinux_x86_64.Dockerfile
 boto3>=1.41.0,<1.42.0
+# Used by install_rocm_from_artifacts.py for remote artifact downloads
+requests>=2.28.0
 
 # hipBLASLt deps
 joblib>=1.4.2
